--- a/package.json
+++ b/package.json
@@ -18,27 +18,30 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "kysely": "^0.26.3",
     "morgan": "^1.10.0",
+    "pg": "^8.11.3",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.16",
-    "@types/eslint": "^8.44.7",
+    "@types/cors": "^2.8.17",
+    "@types/eslint": "^8.44.8",
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/node": "^20.10.3",
+    "@types/pg": "^8.10.9",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
