--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "noEmit": true,
     "allowImportingTsExtensions": true
   },
   "include": ["src/**/*"],
