--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -22,16 +22,6 @@ jobs:
   deploy:
     needs: build
     runs-on: [aws-ec2]
-    env:
-      PORT: ${{secrets.PORT}}
-      NODE_ENV: ${{secrets.NODE_ENV}}
-      DB_NAME: ${{secrets.DB_NAME}}
-      DB_HOST: ${{secrets.DB_HOST}}
-      DB_USER: ${{secrets.DB_USER}}
-      DB_PASS: ${{secrets.DB_PASS}}
-      DB_PORT: ${{secrets.DB_PORT}}
-      DB_MAX_CONN: ${{secrets.DB_MAX_CONN}}
-
     steps:
       - name: Pull image from docker hub
         run: docker pull ${{secrets.DOCKER_USERNAME}}/mse_express:latest
@@ -40,4 +30,4 @@ jobs:
       - name: Delete old container
         run: docker rm -f  mse_server || true
       - name: Run docker container
-        run: docker run -d -p PORT=${{env.PORT}}:PORT=${{env.PORT}} --name mse_server -e PORT=${{env.PORT}} -e NODE_ENV=${{env.NODE_ENV}} -e DB_NAME=${{env.DB_NAME}} -e DB_HOST=${{env.DB_HOST}} -e DB_USER=${{env.DB_USER}} -e DB_PASS="$env:DB_PASS" -e DB_PORT=${{env.DB_PORT}} -e DB_MAX_CONN=${{env.DB_MAX_CONN}} ammarkhawaja/mse_express:latest
+        run: docker run -d -p 5000:5000 --name mse_server -e PORT=5000 -e NODE_ENV=production -e DB_NAME=${{secrets.DB_NAME}} -e DB_HOST=${{secrets.DB_HOST}} -e DB_USER=${{secrets.DB_USER}} -e DB_PASS='${{secrets.DB_PASS}}' -e DB_PORT=${{secrets.DB_PORT}} -e DB_MAX_CONN=${{secrets.DB_MAX_CONN}} ammarkhawaja/mse_express:latest
